tests/files/lexer_tests/should_fail/053.cmdr
// Illegal character in variable name (ascii 20)
myvar = 20;